--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+theme: minimal
 title: "Designing a Bi-Liquid Rocket Engine"
 author: "L U"
 description: "A diary of my progress through a final-year university project. Unimaginative and uninventive!"
