changed author name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: hacker
 title: "Designing a Bi-Liquid Rocket Engine"
-author: "L U"
+author: "lily-uzi"
 description: "A diary of my progress through a final-year university project. Unimaginative and uninventive!"
